--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -5,11 +5,11 @@
           <div class="links">
 
             <div class="home-button" class="d-flex align-items-center">
-                <a href="/feed"><i class="fas fa-home"></i></a>
+                <a href="/feed"><i class="fa fa-home"></i></a>
             </div>
           
             <div class="leaderboard-button" class="d-flex align-items-center">
-                <a href="/leaderboard">  <i class="fas fa-th-list"></i></a>
+                <a href="/leaderboard">  <i class="fa fa-th-list"></i></a>
             </div>
             <div id="dark-mode-toggle" class="d-flex align-items-center">
                 <i id="toggle-icon" class="fas fa-sun"></i>
