small cosmetic change to post menu

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,7 +6,7 @@
   --muted: #8e8e8e;
   --border: rgb(238, 237, 251)!important;
   --card: #ffffff;
-  --post-btn: #AFD1F2;
+  --post-btn: #686fbb;
 
 
 
