--- a/views/leaderboard.ejs
+++ b/views/leaderboard.ejs
@@ -4,7 +4,6 @@
   <div class="row justify-content-center mt-5">
     <form class="col-12 mb-4">
       <div class="form-group">
-        <label for="category-select">Select a category:</label>
         <select class="form-control form-control-lg" id="category-select" name="category" onchange="this.form.submit()">
           <option value="">All categories</option>
           <% for (const category of ['benchpress', 'squat', 'deadlift']) { %>
@@ -14,13 +13,13 @@
           <% } %>
         </select>
       </div>
-      <div class="form-group">
-        <label for="bodyweight-input">Enter a bodyweight in kg:</label>
-        <input type="number" class="form-control form-control-lg" id="bodyweight-input" name="bodyweight" value="<%= selectedBodyweight || '' %>" onchange="this.form.submit()">
+      <div class="form-group pt-2">
+     
+        <input type="number" class="form-control form-control-lg" id="bodyweight-input" name="bodyweight" placeholder="Enter a bodyweight in kg" value="<%= selectedBodyweight || '' %>" onchange="this.form.submit()">
       </div>
-      <div class="form-group">
-        <label for="reps-input">Enter the number of reps:</label>
-        <input type="number" class="form-control form-control-lg" id="reps-input" name="reps" value="<%= selectedReps || '' %>" onchange="this.form.submit()">
+      <div class="form-group pt-2">
+
+        <input type="number" class="form-control form-control-lg" id="reps-input" name="reps" placeholder="Enter a number of reps" value="<%= selectedReps || '' %>" onchange="this.form.submit()">
       </div>
     </form>
     
