--- a/views/post.ejs
+++ b/views/post.ejs
@@ -60,7 +60,7 @@
           <button class="btn btn-link p-0">
             <% if(post.likes.toString().includes(loggedUser._id.toString())) { %>
               <%console.log('true') %>
-              <i class="fas fa-heart"></i>
+              <i class="fas fa-heart" style="font-weight:900!important ;"></i>
             <% } else { %>
               <i class="far fa-heart"></i>
             <% } %>
