--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,32 +1,27 @@
 <%- include('partials/header') -%>
 <div class="container">
   <div class="">
-    
-    
-       
     <div class="profile-info">
-      
-
       <div class="">
         <div id="form-container">
 
           <% if(user._id.toString() == loggedUser._id.toString()){ %>
-        <form id="profile-form" action="/users/saveProfilePic/<%= user._id %>?_method=PUT" method="POST" enctype="multipart/form-data">
-  
-            <label for="profilePic" class="form-label">Profile Pic</label>
-            <input type="file" class="form-control" id="profilePic" name="file" accept="image/*" style="display: none;">
-            <button id="submit-btn" type="submit">Submit</button>
-       
-        </form>
-        <% } %>
+              <form id="profile-form" action="/users/saveProfilePic/<%= user._id %>?_method=PUT" method="POST" enctype="multipart/form-data">
+              
+                  <label for="profilePic" class="form-label">Profile Pic</label>
+                  <input type="file" class="form-control pointer" id="profilePic" name="file" accept="image/*" style="display: none;">
+                  <button id="submit-btn" type="submit">Submit</button>
+              
+              </form>
+          <% } %>
 
         </div>
 
-      
-        <% if( user.profilePic.url == "" ){%>
-        <img  id="profile-pic" class="rounded-circle mr-3 mb-2 pointer" src="/imgs/default.png" alt="Profile picture" width="100" height="100">
-        <%}else{%>
+        
+        <% if(user._id.toString() == loggedUser._id.toString()){ %>
         <img  id="profile-pic" class="rounded-circle mr-3 mb-2 pointer" src="<%= user.profilePic.url %>" alt="Profile picture" width="100" height="100">
+        <%}else{%>
+        <img  id="profile-pic" class="rounded-circle mr-3 mb-2 " src="<%= user.profilePic.url %>" alt="Profile picture" width="100" height="100">
         <%}%>
 
         
@@ -50,14 +45,12 @@
       </div>
       <div style="padding: 1rem 7rem 0 0;">
         
-    
-
         <a href=" /users/<%=user._id%>/followers ">
           <p class="small">Followers: <%= user.followers.length %></p>
           <p class="small">Following: <%= user.following.length %></p>
         </a>
         
-        </div>
+      </div>
   </div>
   
     <div class="col-0">
@@ -69,6 +62,7 @@
 
      
       <ul id="posts-container" class="row list-unstyled profile-grid" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(125px, 1fr)); grid-gap: 0;">
+       
         <% if(posts.length > 0){ %>
         <%for(var i= (posts.length-1); i>=0; i--){%>
         
@@ -91,10 +85,9 @@
         </div>
       <% } %>
       </ul>
-      
-    
     </div>
    
+
     <div id="table-container" style="display:none;" class="col-12">
       <% if(prs.length > 0){ %>
       <table  class="styled-table">
@@ -124,9 +117,7 @@
                   </a>
                 </td>
               </tr>
-         
             <% } %>
-       
         </tbody>
       </table>
     <% } else { %>
